Fix contrast issue

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -279,7 +279,7 @@ main {
 	margin: 1rem auto;
 	padding: 0.5rem;
 	background-color: var(--pnw-blue);
-	color: var(--ink-000);
+	color: var(--ink-000) !important;
 	text-align: center;
     border-radius: var(--radius);
 }
